@@ -10,6 +10,7 @@
     Changes
 
     Bugfixes
+        * fix gem initialization in rails
 
  0.1.0 [2010-02-03]
 ====================
